# PoroAnalysis

./: CMakeLists.txt  README.md  checking.cpp  main.cpp
ObjData/: CMakeLists.txt  ObjData.cpp
ObjData/include/ObjData/: ObjData.hpp
data/test2/: UofC0000.tif  UofC0001.tif  UofC0002.tif  UofC0003.tif  UofC0004.tif  UofC0005.tif  UofC0006.tif  UofC0007.tif  UofC0008.tif  UofC0009.tif  UofC0010.tif  UofC0011.tif  UofC0012.tif  UofC0013.tif  UofC0014.tif  UofC0015.tif
tests/: test1.json
